After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710390 - gst-editing-services: several memory leaks
gst-editing-services: several memory leaks
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
1.2.0
Other All
: Normal major
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-17 13:15 UTC by Kishore Arepalli
Modified: 2013-10-31 22:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix for memory leaks (6.73 KB, patch)
2013-10-17 13:18 UTC, Kishore Arepalli
committed Details | Review

Description Kishore Arepalli 2013-10-17 13:15:42 UTC
Found several unreffed objects
Comment 1 Kishore Arepalli 2013-10-17 13:18:45 UTC
Created attachment 257536 [details] [review]
fix for memory leaks

Unref missing for several pads and elements
Comment 2 Sebastian Dröge (slomo) 2013-10-31 22:12:59 UTC
commit 5a5228a25a1badc99f74f1c123c70996cf9829b0
Author: Kishore Arepalli <kishore.arepalli@gmail.com>
Date:   Thu Oct 17 15:16:00 2013 +0200

    ges: Fix several memory leaks
    
    https://bugzilla.gnome.org/show_bug.cgi?id=710390