ges: Fix several memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=710390